--- a/src/MultiAlign/Properties/Resources.resx
+++ b/src/MultiAlign/Properties/Resources.resx
@@ -151,4 +151,13 @@
   <data name="manassaMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\manassaMain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="database_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\database-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="server_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\server-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="text_file_3_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\text-file-3-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
