--- a/src/MultiAlign/Properties/Resources.resx
+++ b/src/MultiAlign/Properties/Resources.resx
@@ -160,4 +160,19 @@
   <data name="text_file_3_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\text-file-3-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="circle_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\circle-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="list_view_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\list-view-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search_3_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\search-3-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="spectrum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\molecule1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tag_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\tag-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
