--- a/src/MultiAlign/Properties/Resources.resx
+++ b/src/MultiAlign/Properties/Resources.resx
@@ -175,4 +175,7 @@
   <data name="tag_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\tag-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AnalysisOptionsViewModel_AnalysisOptionsViewModel_MultiAlign_Parameters____xml_____xml_All_Files__________" xml:space="preserve">
+    <value>MultiAlign Parameters (*.xml)| *.xml|All Files (*.*)|*.*</value>
+  </data>
 </root>
