Change over to Oxyplot from PNNL Controls.  Starting to remove dependencies on that library.  too difficult to add simple features.  Also does not easily support MVVM and is WF not WPF

--- a/src/MultiAlign/Properties/Resources.resx
+++ b/src/MultiAlign/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="MultiAlignParameterFileFilter" xml:space="preserve">
     <value>MultiAlign Parameters (*.json)| *.json|All Files (*.*)|*.*</value>
   </data>
+  <data name="MsMsSaveFilter" xml:space="preserve">
+    <value>DTA (*.dta)|*.dta|MGF (*.mgf)|*.mgf</value>
+  </data>
 </root>
